Fixed overflow issue on root

--- a/src/css/rootinsight.css
+++ b/src/css/rootinsight.css
@@ -323,6 +323,7 @@
 
 .project-services {
   padding: 0 3rem;
+  overflow: hidden;
 }
 
 @media (min-width: 768px) {
